# the-bot-v6

./: .gitignore  Cargo.toml  README.md  temp.txt
migrations/: 20240807192814_1.sql
src/: error.rs  main.rs
src/commands/: mod.rs
src/commands/admin/: mod.rs  say.rs  time_based.rs  timed_message_config.rs
src/commands/fun/: bite.rs  calculate.rs  kazakhstan.rs  minesweeper.rs  mod.rs  sashley.rs  soy.rs  speechbubble.rs  translate.rs
src/commands/info/: help.rs
src/commands/owner/: cleverbot.rs  kill.rs  mod.rs
src/commands/randomizer/: animal.rs  mod.rs  palette.rs  popequote.rs
src/db_access/: mod.rs  model_trait.rs  popequote_model.rs
src/events/: activity.rs  clairvoyance.rs  handler.rs  mod.rs  on_message.rs  papiez.rs  pope_msg.rs  time_based.rs
src/helpers/: cleverbot.rs  discord.rs  images.rs  logging.rs  misc.rs  mod.rs  pagination.rs  purgatory.rs
src/model/: boilerplate.rs  default_response.rs  location.rs  mod.rs  pope_msg_location.rs  popequote.rs  prophecy.rs
temp/: Cargo.toml
temp/src/: main.rs
