[package]
name = "the-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
shuttle-serenity = "0.45.0"
shuttle-runtime = "0.45.0"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
sqlx = { version = "0.7.3", features = ["postgres", "migrate", "runtime-tokio-native-tls"] }
rand = "0.8.5"
anyhow = "1.0.86"
chrono = "0.4.31"
serde = "1.0.193"
chrono-tz = "0.8.4"
tokio-cron = "0.1.2"
humantime = "2.1.0"
ordinal = "0.3.2"
shunting = "0.1.2"
futures = "0.3.30"
regex = "1.10.6"
thiserror = "1.0.63"
async-trait = "0.1.81"
titlecase = "3.3.0"
lazy_static = "1.5.0"
image = "0.24.7"
fast_image_resize = "3.0.4"
grid = "0.14.0"

